interfaz con servidor ok

--- a/server/control_bt.ui
+++ b/server/control_bt.ui
@@ -60,7 +60,7 @@
           <string/>
          </property>
          <property name="pixmap">
-          <pixmap>../../../../../../Descargas/Telegram Desktop/photo_2021-11-19_03-34-04.jpg</pixmap>
+          <pixmap>../../../../Descargas/Telegram Desktop/photo_2021-11-19_03-34-04.jpg</pixmap>
          </property>
          <property name="scaledContents">
           <bool>true</bool>
