--- a/client/Cliente_funciona/Qt_panel/panel-control.ui
+++ b/client/Cliente_funciona/Qt_panel/panel-control.ui
@@ -25,6 +25,9 @@
       </property>
       <item>
        <widget class="QFrame" name="frame_arriba">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(28, 113, 216);</string>
+        </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
@@ -79,41 +82,6 @@
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout">
-          <item row="0" column="3">
-           <widget class="QComboBox" name="bt_list">
-            <item>
-             <property name="text">
-              <string>98:D3:31:FC:96:5F - HC-06</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>94:17:00:DD:74:5F - Bawy~</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-          <item row="3" column="2">
-           <widget class="QPushButton" name="btn_derecha">
-            <property name="text">
-             <string>Derecha</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="3">
-           <widget class="QPushButton" name="on_off_server">
-            <property name="text">
-             <string>Botón Servidor</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0" colspan="3">
-           <widget class="QLabel" name="t_botones">
-            <property name="text">
-             <string>TextLabel</string>
-            </property>
-           </widget>
-          </item>
           <item row="4" column="1">
            <widget class="QPushButton" name="btn_retroceder">
             <property name="text">
@@ -128,10 +96,38 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="3">
+           <widget class="QComboBox" name="bt_list">
+            <item>
+             <property name="text">
+              <string>98:D3:31:FC:96:5F - HC-06</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>94:17:00:DD:74:5F - Bawy~</string>
+             </property>
+            </item>
+           </widget>
+          </item>
           <item row="1" column="3">
            <widget class="QPushButton" name="on_off_bt">
             <property name="text">
              <string>Conectar dispositivo Bluetooth</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="3">
+           <widget class="QPushButton" name="on_off_server">
+            <property name="text">
+             <string>Botón Cliente</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="3">
+           <widget class="QLabel" name="t_botones">
+            <property name="text">
+             <string>TextLabel</string>
             </property>
            </widget>
           </item>
@@ -145,17 +141,24 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
-           <widget class="QPushButton" name="btn_izquierda">
-            <property name="text">
-             <string>Izquierda</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0" colspan="3">
            <widget class="QRadioButton" name="on_off_motor">
             <property name="text">
              <string>Activar / Desactivar Motores</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QPushButton" name="btn_derecha">
+            <property name="text">
+             <string>Derecha</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QPushButton" name="btn_izquierda">
+            <property name="text">
+             <string>Izquierda</string>
             </property>
            </widget>
           </item>
@@ -169,7 +172,8 @@
          <bool>false</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(28, 113, 216);</string>
+         <string notr="true">alternate-background-color: rgb(129, 61, 156);
+border: 3px solid black;</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
